rename to ShapeShifter99, make sure pixel grid is above library overlay

--- a/style.css
+++ b/style.css
@@ -445,7 +445,7 @@ canvas {
 #pixels {
   position: absolute;
   inset: 0;
-  z-index: 3;
+  z-index: 10;
   pointer-events: none;
 }
 #pixels::before {
